--- a/src/app/homepage/home/home.component.html
+++ b/src/app/homepage/home/home.component.html
@@ -325,9 +325,9 @@
             </div>
             <div class="form-search">
               <div class="input-group"><input style="color: black;" type="text" id="q"
-                                              placeholder="Tìm địa điểm, món ăn, địa chỉ..." value="" [(ngModel)]="nameSearch"><a
+                                              placeholder="Tìm địa điểm, món ăn, địa chỉ..." value="" (input)="searchMerchantByName()" [(ngModel)]="nameSearch"><a
                ><button type="button"
-                                                                          class="btn btn-search"(click)="searchMerchantByName()"><span class="fa fa-search" ></span></button></a></div>
+                                                                          class="btn btn-search"><a class="fa fa-search"></a></button></a></div>
             </div>
             <div class="category-list-filter"><a routerLink="list-merchant"><span
               class="category-item ">All</span></a><a
